[package]
name = "memory"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[[example]]
name = "hello-build"
crate-type = ["bin"]

[[example]]
name = "hello-interpreter-1"
crate-type = ["bin"]

[[example]]
name = "hello-interpreter-2"
crate-type = ["bin"]

[dependencies]
cargo-cmd = "0.3.1"
rand = "0.8.5"
slint = "1.0.0"
slint-interpreter = { version = "1.0.0", features = ["display-diagnostics"] }
spin_on = "0.1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.84" }
getrandom = { version = "0.2.9", features = ["js"] }

[build-dependencies]
slint-build = "1.0.0"

[package.metadata.commands]
build-web = "wasm-pack build --target web"
build-web-release = "wasm-pack build --release --target web"
start-server = "python3 -m http.server"

[profile.release]
strip = "debuginfo"
lto = true
